Pool list nicer setup.

--- a/class3/Makefile
+++ b/class3/Makefile
@@ -1,18 +1,19 @@
 SHELL:=/bin/bash
 CC:=clang
-CFLAGS:=-Wall -Werror -Wextra -std=c99 -Wshadow
-LFLAGS:=-lm
+CFLAGS:=-Wall -Werror -Wextra -std=c99 -Wshadow -Wno-unused-parameter
+LFLAGS:=
+PROGRAM:=program.exe
 
 %.o: %.c
 	${CC} -c $^ -o $@ ${CFLAGS}
 
-program.exe: pool_list.o test_pool_list.o
+${PROGRAM}: pool_list.o test_pool_list.o
 	${CC} ${LFLAGS} -o $@ $^
 
 .PHONY: clean
 clean:
-	@rm -rf program.exe *.o
+	@rm -rf ${PROGRAM} *.o
 
 .PHONY: test
-test: program
-	./program.exe input_data.txt
+test: ${PROGRAM}
+	./${PROGRAM} input_data.txt
