Fix unused variable errors so that starter code builds and runs

--- a/class4/Makefile
+++ b/class4/Makefile
@@ -1,13 +1,13 @@
 SHELL:=/bin/bash
 CC:=clang
-CFLAGS:=-Wall -Werror -Wextra -std=c99 -Wshadow -Wno-unused-parameter -g
-LFLAGS:=
+CFLAGS:=-Wall -Werror -Wextra -std=c99 -Wshadow -Wno-unused-parameter -Wno-unused-variable -g
+LFLAGS:=-lncurses
 PROGRAM:=program.exe
 
 %.o: %.c
 	${CC} -c $^ -o $@ ${CFLAGS}
 
-${PROGRAM}: main.o maze.o
+${PROGRAM}: main.o maze.o point.o game.o
 	${CC} ${LFLAGS} -o $@ $^
 
 .PHONY: clean
