fix bug in main not printing score, add stty sane to makefile for when it inevitably crashes

--- a/class4/Makefile
+++ b/class4/Makefile
@@ -16,8 +16,8 @@ clean:
 
 .PHONY: test
 test: ${PROGRAM}
-	./${PROGRAM} maze.txt
+	./${PROGRAM} maze.txt || stty sane
 
 .PHONY: debug
 debug: test
-	gdb ${PROGRAM} -ex 'run maze.txt'
+	gdb ${PROGRAM} -ex 'run maze.txt' || stty sane
